--- a/kitap_al_ver/pubspec.yaml
+++ b/kitap_al_ver/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^1.1.2
   photo_manager: ^3.3.0
   firebase_core: ^2.24.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
