--- a/kitap_al_ver/pubspec.yaml
+++ b/kitap_al_ver/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   photo_manager: ^3.3.0
   firebase_core: ^2.24.2
   provider: ^6.1.2
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
