--- a/kitap_al_ver/pubspec.yaml
+++ b/kitap_al_ver/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   firebase_core: ^2.24.2
   provider: ^6.1.2
   fluttertoast: ^8.2.8
+  flutter_staggered_grid_view: ^0.7.0
+  cached_network_image: ^3.4.1
+  date_format: ^2.0.9
 
 dev_dependencies:
   flutter_test:
