--- a/kitap_al_ver/pubspec.yaml
+++ b/kitap_al_ver/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   cached_network_image: ^3.4.1
   date_format: ^2.0.9
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
