--- a/kitap_al_ver/pubspec.yaml
+++ b/kitap_al_ver/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   date_format: ^2.0.9
   shared_preferences: ^2.3.2
   carousel_slider: ^5.0.0
+  flutter_background_service: ^5.0.10
+  flutter_background_service_android: ^6.2.7
+  flutter_background_service_ios: ^5.0.3
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
